crates/compiler/tests/parse_errors/weird_decl.elm
module Main exposing (..)

= 1
